tests/paczka1/small_fuzzy/72748793.err
Error in line 5: AWUE8D5T A148 69,2
Error in line 3: 5d9jZCC2 S326 49,9
Error in line 15: CaeI4jVQLh S326 87,73
